--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Template one</title>
+    <title>Template one - Leon</title>
     <!-- Main Template css File -->
     <link rel="stylesheet" href="css/leon.css" />
     <!-- Browser Tab Icon -->
